# cephsumfs

./: .gitignore  README.md
.github/workflows/: rpm.yml
cephsum/: LICENSE  README.md  cephsumfs.spec  pyproject.toml  setup.cfg
cephsum/cephsumfs/: __init__.py  algorithms.py  cli.py  reader.py  xattr.py
cephsum/debian/: changelog  control  copyright  rules
cephsum/scripts/: profile_performance.py  run_checksum.sh
cephsum/tests/: test_algorithms.py  test_cli.py  test_reader.py  test_xattr.py
